--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   equatable: ^2.0.0
   flutter_bloc: ^7.0.0
+  pedantic: ^1.11.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,6 +35,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   test: ^1.16.5
+  build_runner: ^1.11.0
+  mockito: ^5.0.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
