--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -26,6 +26,9 @@ jobs:
       # Check for any formatting issues in the code.
       - run: flutter format --set-exit-if-changed .
 
+      # Generate mocks
+      - run: flutter pub run build_runner build
+
       # Run widget tests for our flutter project.
       - run: flutter test
 
