--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -3,7 +3,7 @@ name: Flutter CI
 on: push    # Default will running for every branch.
 
 jobs:
-  build:
+  test:
     # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
@@ -34,3 +34,30 @@ jobs:
 
       # Run widget tests for our flutter project.
       - run: flutter test
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      # Setup Java environment in order to build the Android app.
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+
+      # Setup the flutter environment.
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: 'stable' # 'dev', 'alpha', default to: 'stable'
+          # flutter-version: '1.12.x' # you can also specify exact version of flutter
+
+      # Get flutter dependencies.
+      - run: flutter pub get
+
+      # Build Android release
+      - run: flutter build appbundle --release
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: release.aab
+          path: build/app/outputs/bundle/release/app-release.aab
+
