--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -35,7 +35,7 @@ jobs:
       # Run widget tests for our flutter project.
       - run: flutter test
 
-  build:
+  build_android:
     runs-on: ubuntu-latest
     steps:
       # Setup Java environment in order to build the Android app.
@@ -58,6 +58,23 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: release.aab
+          name: android-release.aab
           path: build/app/outputs/bundle/release/app-release.aab
 
+  build_ios:
+    runs-on: macOS-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: 'stable'
+      - run: flutter pub get
+      - run: flutter build ios --release --no-codesign
+      - name: Upload iPA
+        uses: actions/upload-artifact@v2
+        with:
+          name: ios-build
+          path: build/ios/iphoneos
