--- a/.github/workflows/pr-workflow.yml
+++ b/.github/workflows/pr-workflow.yml
@@ -54,12 +54,12 @@ jobs:
       - run: flutter pub get
 
       # Build Android
-      - run: flutter build appbundle --debug
+      - run: flutter build apk --debug
 
       - uses: actions/upload-artifact@v2
         with:
           name: android-debug
-          path: build/app/outputs/bundle/debug/app-debug.aab
+          path: build/app/outputs/bundle/debug/app-debug.apk
 
   build_ios:
     runs-on: macOS-latest
