upload ios to firebase app distribution on pr

--- a/.github/workflows/pr-workflow.yml
+++ b/.github/workflows/pr-workflow.yml
@@ -90,10 +90,17 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: android-debug
-      - name: upload builds to Firebase App Distribution
+      - name: upload Android app to Firebase App Distribution
         uses: hasretsariyer/firebase-app-distribution-github-action@v1.0
         with:
           app_id: ${{secrets.FIREBASE_ANDROID_APP_ID}}
           firebase_token: ${{secrets.FIREBASE_TOKEN}}
           tester_groups: testers
           app_file: app-debug.apk
+      - name: upload iOS app to Firebase App Distribution
+        uses: hasretsariyer/firebase-app-distribution-github-action@v1.0
+        with:
+          app_id: ${{secrets.FIREBASE_IOS_APP_ID}}
+          firebase_token: ${{secrets.FIREBASE_TOKEN}}
+          tester_groups: testers
+          app_file: Runner.app
