--- a/.github/workflows/master-workflow.yml
+++ b/.github/workflows/master-workflow.yml
@@ -92,4 +92,10 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: android-release
-      # TODO upload to stores
+      - uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJson: ${{secrets.SERVICE_ACCOUNT_JSON}}
+          packageName: com.example.flutter_app
+          releaseFile: android-release
+          track: internal
+      # TODO upload to app store
