--- a/.github/workflows/pr-workflow.yml
+++ b/.github/workflows/pr-workflow.yml
@@ -73,7 +73,7 @@ jobs:
           channel: 'stable'
       - run: flutter pub get
       - run: flutter build ios --debug --no-codesign
-      - name: Upload iPA
+      - name: Upload Runner.app
         uses: actions/upload-artifact@v2
         with:
           name: ios-debug
