--- a/.github/workflows/master-workflow.yml
+++ b/.github/workflows/master-workflow.yml
@@ -94,7 +94,7 @@ jobs:
           name: android-release
       - uses: r0adkll/upload-google-play@v1
         with:
-          serviceAccountJson: ${{secrets.SERVICE_ACCOUNT_JSON}}
+          serviceAccountJsonPlainText: ${{secrets.SERVICE_ACCOUNT_JSON}}
           packageName: com.example.flutter_app
           releaseFiles: app-release.aab
           track: internal
