--- a/.github/workflows/master-workflow.yml
+++ b/.github/workflows/master-workflow.yml
@@ -27,10 +27,10 @@ jobs:
       - run: flutter pub get
 
       # Check for any formatting issues in the code.
-      - run: flutter format --set-exit-if-changed .
+      - run: dart format --set-exit-if-changed .
 
       # Generate mocks
-      - run: flutter pub run build_runner build
+      - run: dart pub run build_runner build
 
       # Statically analyze the Dart code for any errors.
       - run: flutter analyze .
